Fix gap between picks when one team has many more picks than the other

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -442,6 +442,7 @@ table a {
   display: flex;
   gap: 2rem;
   width: 100%;
+  align-items: flex-start;
 }
 
 .PicksList ul {
